fix home banner on mobile

--- a/_sass/sizes/_text-sizes.scss
+++ b/_sass/sizes/_text-sizes.scss
@@ -33,5 +33,6 @@ hr.divider {
 }
 
 .page-section {
-  padding: 8rem 0;
+  padding-top: 8rem;
+  padding-bottom: 8rem;
 }
